--- a/src/app/pages/search-page/book-card/book-card.component.html
+++ b/src/app/pages/search-page/book-card/book-card.component.html
@@ -1,1 +1,35 @@
-<p>book-card works!</p>,
+<div
+  class="w-80 h-50 bg-white rounded-2xl shadow-lg border border-gray-200 p-6 flex flex-col"
+>
+  <!-- Título e icono -->
+  <div>
+    <h2
+      class="text-lg font-bold text-gray-800 flex items-center justify-between"
+    >
+      <span>{{ bookCard().title }}</span>
+      <svg
+        class="w-5 h-5 text-gray-500 flex-shrink-0"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="currentColor"
+        (click)="onMoreInfo(bookCard().id)"
+      >
+        <path
+          d="M12 17q.425 0 .713-.288T13 16v-4q0-.425-.288-.712T12 11t-.712.288T11 12v4q0 .425.288.713T12 17m0-8q.425 0 .713-.288T13 8t-.288-.712T12 7t-.712.288T11 8t.288.713T12 9m0 13q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8"
+        />
+      </svg>
+    </h2>
+    <p class="text-sm text-gray-600 italic mt-1">{{ bookCard().author }}</p>
+  </div>
+
+  <!-- ISBN -->
+  <p class="text-gray-700 mt-2">
+    <span class="font-medium">ISBN:</span> {{ bookCard().isbn }}
+  </p>
+
+  <!-- Fecha y páginas pegadas abajo -->
+  <div class="flex justify-between text-xs text-gray-500 mt-auto pt-1">
+    <span>{{ bookCard().publishedDate }}</span>
+    <span>{{ bookCard().pageNumber }} páginas</span>
+  </div>
+</div>
