--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -1,46 +1,16 @@
 <top-bar></top-bar>
 
-<search-bar (query)="getSearchedBook($event)"></search-bar>    
+<search-bar (query)="getSearchedBook($event)"></search-bar>
 
-<div class="grid gap-2 md:grid-cols-2 lg:grid-cols-4 px-4">
-  @for (book of bookList(); track book.id) {
+<div class="mx-auto max-w-7xl px-6 pb-16 pt-4">
+  <div class="flex flex-wrap justify-center gap-8">
+    @for (book of bookList(); track book.id) {
+        <book-card
+          [bookCard]="book"
 
-  <!-- Contenido -->
-  <div
-    class="w-full sm:w-80 bg-white rounded-2xl shadow-lg border border-gray-200 p-6 hover:shadow-xl transition-shadow duration-300 flex flex-col justify-between h-full"
-  >
-    <!-- Título y autor -->
-    <div>
-      <h2
-        class="text-xl font-bold text-gray-800 flex items-center justify-between"
-      >
-        <span class="truncate">{{ book.title }}</span>
-        <svg
-          class="w-6 h-6 text-gray-500 flex-shrink-0 ml-2"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 24 24"
-          fill="currentColor"
-          (click)="onMoreInfo(book.id)"
-        >
-          <path
-            d="M12 17q.425 0 .713-.288T13 16v-4q0-.425-.288-.712T12 11t-.712.288T11 12v4q0 .425.288.713T12 17m0-8q.425 0 .713-.288T13 8t-.288-.712T12 7t-.712.288T11 8t.288.713T12 9m0 13q-2.075 0-3.9-.788t-3.175-2.137T2.788 15.9T2 12t.788-3.9t2.137-3.175T8.1 2.788T12 2t3.9.788t3.175 2.137T21.213 8.1T22 12t-.788 3.9t-2.137 3.175t-3.175 2.138T12 22m0-2q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4T6.325 6.325T4 12t2.325 5.675T12 20m0-8"
-          />
-        </svg>
-      </h2>
-      <p class="text-sm text-gray-600 italic mt-1">{{ book.author }}</p>
-    </div>
-
-    <!-- ISBN justo encima del bloque inferior -->
-    <p class="text-gray-700 mt-2">
-      <span class="font-medium">ISBN:</span> {{ book.isbn }}
-    </p>
-
-    <!-- Fecha y páginas pegadas abajo -->
-    <div class="flex justify-between text-xs text-gray-500 mt-auto pt-4">
-      <span>{{ book.publishedDate }}</span>
-      <span>{{ book.pageNumber }} páginas</span>
-    </div>
+        
+        > </book-card>
+    }
   </div>
-
-  }
 </div>
+
