nuevo componente para filtrar por autor o editorial añadido

--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -1,6 +1,9 @@
 <top-bar></top-bar>
 
-<search-bar (query)="getSearchedBook($event)"></search-bar>
+<div class="flex justify-center items-center gap-4">
+  <search-bar (query)="getSearchedBook($event)"></search-bar>
+  <filter-book></filter-book>
+</div>
 
 <div class="mx-auto max-w-7xl px-6 pb-16 pt-4">
   <div class="flex flex-wrap justify-center gap-8">
