añadida la funcionalidad para filtrar libros por autor y editorial, ademas se ha añadido una lupa que al pulsar busca el input

--- a/src/app/books/pages/search-page/filter-book/filter-book.component.html
+++ b/src/app/books/pages/search-page/filter-book/filter-book.component.html
@@ -39,7 +39,7 @@
         placeholder="Nombre del autor"
         class="input input-sm input-bordered w-full"
         #txtAuthor
-        (keyup.enter)="onSearchByAuthor(txtAuthor.value)"
+        (input)="onSearchByAuthor(txtAuthor.value)"
       />
     </div>
 
@@ -51,8 +51,8 @@
         type="text"
         placeholder="Nombre de la editorial"
         class="input input-sm input-bordered w-full"
-        #txtAuthor
-        (keyup.enter)="onSearchByPublisher(txtAuthor.value)"
+        #txtPublisher
+        (input)="onSearchByPublisher(txtPublisher.value)"
       />
     </div>
   </ul>
