--- a/src/app/books/pages/search-page/book-card/book-card.component.html
+++ b/src/app/books/pages/search-page/book-card/book-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-80 h-55 bg-white rounded-2xl shadow-lg border border-gray-200 p-6 flex flex-col"
+  class="w-80 h-55 bg-white rounded-2xl shadow-lg border border-gray-200 mt-4 p-6 flex flex-col"
 >
   <!-- Título e icono -->
   <div>
