--- a/src/app/books/pages/search-page/search-page.component.html
+++ b/src/app/books/pages/search-page/search-page.component.html
@@ -2,7 +2,10 @@
 
 <div class="flex justify-center items-center gap-4">
   <search-bar (query)="getSearchedBook($event)"></search-bar>
-  <filter-book></filter-book>
+  <filter-book
+    (bookAuthor)="filteredAuthor=$event"
+    (bookPublisher)="filteredPublisher=$event"
+  ></filter-book>
 </div>
 
 <div class="mx-auto max-w-7xl px-6 pb-16 pt-4">
@@ -10,8 +13,7 @@
     @for (book of bookList(); track book.id) {
         <book-card
           [bookCard]="book"
-
-        
+          (bookId)="getSearchedBookById($event)"        
         > </book-card>
     }
   </div>
