--- a/src/app/books/pages/info-page/info-page.component.html
+++ b/src/app/books/pages/info-page/info-page.component.html
@@ -1,4 +1,5 @@
-<div class="bg-white rounded-xl shadow-md mt-10 p-6 space-y-3 border border-gray-200 max-w-xl mx-auto">
+<div class="bg-white rounded-xl shadow-md mt-6 sm:mt-10 px-4 py-4 sm:px-6 sm:py-6 space-y-3 border border-gray-200 max-w-full sm:max-w-xl mx-4 sm:mx-auto">
+
   <h2 class="text-2xl font-bold text-gray-800">{{ book.title }}</h2>
 
   <p [innerHTML]="book.description" class="text-gray-700 italic"></p>
