--- a/src/app/books/pages/search-page/search-bar/search-bar.component.html
+++ b/src/app/books/pages/search-page/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <span class="flex items-center gap-2">
-  <label class="input w-xl flex items-center gap-2">
+  <label class="input w-full sm:w-90 flex items-center gap-2">
     <!-- Lupa izquierda -->
     <svg
       class="h-[1em] opacity-50"
