--- a/src/app/books/pages/search-page/top-bar/top-bar.component.html
+++ b/src/app/books/pages/search-page/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <!-- Título principal con margen superior -->
-<div class="mt-12 mb-8 flex justify-center px-4">
+<div class="mt-12 mb-8 flex justify-center mr-10 px-4">
   <div
     class="flex flex-row sm:flex-row items-center gap-2 sm:gap-4 text-center"
   >
