--- a/src/app/books/pages/search-page/search-bar/search-bar.component.html
+++ b/src/app/books/pages/search-page/search-bar/search-bar.component.html
@@ -1,18 +1,12 @@
-<span class="flex items-center gap-2">
-  <label class="input w-xl flex items-center gap-2">
+<span class="flex  sm:flex-row items-center gap-2 w-full max-w-screen">
+  <label class="input flex items-center gap-2 w-full sm:w-auto max-w-full">
     <!-- Lupa izquierda -->
     <svg
       class="h-[1em] opacity-50"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 0 24 24"
     >
-      <g
-        stroke-linejoin="round"
-        stroke-linecap="round"
-        stroke-width="4"
-        fill="none"
-        stroke="currentColor"
-      >
+      <g stroke-linejoin="round" stroke-linecap="round" stroke-width="4" fill="none" stroke="currentColor">
         <circle cx="11" cy="11" r="8"></circle>
         <path d="m21 21-4.3-4.3"></path>
       </g>
@@ -21,7 +15,7 @@
     <!-- Campo de búsqueda -->
     <input
       type="search"
-      class="grow"
+      class="grow w-full"
       placeholder="Buscar libro por título"
       autofocus
       #txtSearch
