se ha hecho la busqueda persistente tras actualizar el navegador

--- a/src/app/books/pages/search-page/search-bar/search-bar.component.html
+++ b/src/app/books/pages/search-page/search-bar/search-bar.component.html
@@ -17,6 +17,7 @@
       type="search"
       class="grow w-full"
       placeholder="Buscar libro por título"
+      [value]="searchValue"
       autofocus
       #txtSearch
       (keyup.enter)="onSearchBook(txtSearch.value)"
