--- a/src/app/books/components/top-bar/top-bar.component.html
+++ b/src/app/books/components/top-bar/top-bar.component.html
@@ -14,7 +14,7 @@
         d="M6 22q-.825 0-1.412-.587T4 20V4q0-.825.588-1.412T6 2h12q.825 0 1.413.588T20 4v16q0 .825-.587 1.413T18 22zm0-2h12V4h-2v7l-2.5-1.5L11 11V4H6zm0 0V4zm5-9l2.5-1.5L16 11l-2.5-1.5z"
       />
     </svg>
-    <h1 class="text-2xl sm:text-4xl font-bold text-gray-800">
+    <h1 class="text-2xl sm:text-4xl font-bold text-base-content">
       Buscador de Libros
     </h1>
   </div>
