se han trasladado todos los componentes a la carpeta /components. se ha simplificado el codigo evitando funciones on<Function>, en su lugar se emiten los valores directamente desde el html correspondiente al padre que escucha el evento. Se ha comprobacion de la respuesta al obtener libros, y un componente para indicar que no se ha encontrado libros

--- a/src/app/books/components/filter-book/filter-book.component.html
+++ b/src/app/books/components/filter-book/filter-book.component.html
@@ -39,7 +39,7 @@
         placeholder="Nombre del autor"
         class="input input-sm input-bordered w-full"
         #txtAuthor
-        (input)="onSearchByAuthor(txtAuthor.value)"
+        (input)="bookAuthor.emit(txtAuthor.value)"
       />
     </div>
 
@@ -52,7 +52,7 @@
         placeholder="Nombre de la editorial"
         class="input input-sm input-bordered w-full"
         #txtPublisher
-        (input)="onSearchByPublisher(txtPublisher.value)"
+        (input)="bookPublisher.emit(txtPublisher.value)"
       />
     </div>
   </ul>
